--- a/maplestory_m.conf
+++ b/maplestory_m.conf
@@ -1,15 +1,15 @@
-# Shadowrocket: 2021-02-24 14:09:30
+# Shadowrocket: 2021-02-24 14:26:57
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com
 tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32
 dns-server = system
 ipv6 = true
+update-url = https://raw.githubusercontent.com/zmapleshine/MapleStoryM-SimLess/main/maplestory_m.conf
 
 
 
 [Rule]
-
 USER-AGENT,Line*,PROXY
 DOMAIN-KEYWORD,blogspot,PROXY
 DOMAIN-KEYWORD,google,PROXY
@@ -40,7 +40,6 @@ DOMAIN-SUFFIX,tdesktop.com,PROXY
 DOMAIN-SUFFIX,telegra.ph,PROXY
 DOMAIN-SUFFIX,telegram.me,PROXY
 DOMAIN-SUFFIX,telegram.org,PROXY
-
 IP-CIDR,91.108.4.0/22,PROXY,no-resolve
 IP-CIDR,91.108.8.0/22,PROXY,no-resolve
 IP-CIDR,91.108.12.0/22,PROXY,no-resolve
@@ -67,8 +66,9 @@ localhost = 127.0.0.1
 
 
 [Script]
-entertoy = type=http-response,script-path=enterToy.js,pattern=^https://m-api.nexon.com/sdk/enterToy.nx,max-size=131072,requires-body=true,timeout=10,enable=true
+enterToy = type=http-response,script-path=https://raw.githubusercontent.com/zmapleshine/MapleStoryM-SimLess/main/enterToy.js,pattern=^https://m-api.nexon.com/sdk/enterToy.nx,max-size=131072,requires-body=true,timeout=10,enable=true
 
 [MITM]
+enable = true
 hostname = m-api.nexon.com
 
